<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.menumaker.MainFragment"
        android:label="@string/menu_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_CookBookFragment"
            app:destination="@id/CookBookFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SettingFragment"
            app:destination="@id/SettingsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ItemFragment"
            app:destination="@id/list" />
    </fragment>
    <fragment
        android:id="@+id/CookBookFragment"
        android:name="com.example.menumaker.CookBookFragment"
        android:label="@string/cookbook_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.example.menumaker.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/settings">

        <action
            android:id="@+id/action_SettingsFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/list"
        android:name="com.example.menumaker.GroceryFragment"
        android:label="@string/item_fragment_label"
        tools:layout="@layout/fragment_item">

    </fragment>

</navigation>